--- a/Assets/UI/SkyborneMenuStyles.uss
+++ b/Assets/UI/SkyborneMenuStyles.uss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(240, 249, 255);
-    background-image: linear-gradient(135deg, rgb(224, 242, 254) 0%, rgb(255, 255, 255) 50%, rgb(239, 246, 255) 100%);
+    -unity-background-image-tint-color: rgb(224, 242, 254);
     justify-content: center;
     align-items: center;
     padding: 20px;
