--- a/Assets/UI/MainMenu.uxml
+++ b/Assets/UI/MainMenu.uxml
@@ -5,27 +5,12 @@
             <ui:Label text="SKYBORNE" name="GameTitle" class="game-title" />
             <ui:Label text="Soar Beyond the Clouds" name="GameSubtitle" class="game-subtitle" />
         </ui:VisualElement>
-        
         <ui:VisualElement name="ButtonContainer" class="button-container">
-            <ui:Button text="Play" name="PlayButton" class="menu-button primary-button">
-                <ui:VisualElement name="PlayIcon" class="button-icon play-icon" />
-            </ui:Button>
-            
-            <ui:Button text="Tutorial" name="TutorialButton" class="menu-button secondary-button">
-                <ui:VisualElement name="TutorialIcon" class="button-icon tutorial-icon" />
-            </ui:Button>
-            
-            <ui:Button text="Options" name="OptionsButton" class="menu-button secondary-button">
-                <ui:VisualElement name="OptionsIcon" class="button-icon options-icon" />
-            </ui:Button>
-            
-            <ui:Button text="Credits" name="CreditsButton" class="menu-button secondary-button">
-                <ui:VisualElement name="CreditsIcon" class="button-icon credits-icon" />
-            </ui:Button>
-            
-            <ui:Button text="Quit" name="QuitButton" class="menu-button quit-button">
-                <ui:VisualElement name="QuitIcon" class="button-icon quit-icon" />
-            </ui:Button>
+            <ui:Button text="Play" name="PlayButton" class="menu-button primary-button" />
+            <ui:Button text="Tutorial" name="TutorialButton" class="menu-button secondary-button" />
+            <ui:Button text="Options" name="OptionsButton" class="menu-button secondary-button" />
+            <ui:Button text="Credits" name="CreditsButton" class="menu-button secondary-button" />
+            <ui:Button text="Quit" name="QuitButton" class="menu-button quit-button" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
