Improved image scaling

--- a/Assets/UI/TutorialMenu.uxml
+++ b/Assets/UI/TutorialMenu.uxml
@@ -6,18 +6,15 @@
                 <ui:Label text="Tutorial" name="TutorialTitle" class="tutorial-title" />
                 <ui:Label text="Slide 1 of 5" name="SlideCounter" class="slide-counter" />
             </ui:VisualElement>
-            
             <ui:VisualElement name="TutorialContent" class="tutorial-content">
-                <ui:VisualElement name="SlideImage" class="slide-image" />
+                <ui:Image name="SlideImage" scale-mode="ScaleToFit" class="slide-image" />
                 <ui:Label text="Welcome to Skyborne" name="SlideTitle" class="slide-title" />
-                <ui:Label text="Embark on an epic aerial adventure in the floating islands of Aetheria. Master the art of flight and discover ancient secrets hidden in the clouds." name="SlideDescription" class="slide-description" />
+                <ui:Label text="Embark on an epic aerial adventure in the floating islands of Aetheria. Master the art of flight and discover ancient secrets hidden in the clouds." name="SlideDescription" class="slide-description" style="height: 95px; width: 575px;" />
             </ui:VisualElement>
-            
             <ui:VisualElement name="TutorialNavigation" class="tutorial-navigation">
-                <ui:Button text="Previous" name="PreviousButton" class="nav-button previous-button">
+                <ui:Button text="Previous" name="PreviousButton" class="nav-button previous-button" style="height: 50px; width: 100px;">
                     <ui:VisualElement name="PrevIcon" class="nav-icon prev-icon" />
                 </ui:Button>
-                
                 <ui:VisualElement name="SlideIndicators" class="slide-indicators">
                     <ui:VisualElement name="Indicator0" class="slide-indicator active" />
                     <ui:VisualElement name="Indicator1" class="slide-indicator" />
@@ -25,12 +22,10 @@
                     <ui:VisualElement name="Indicator3" class="slide-indicator" />
                     <ui:VisualElement name="Indicator4" class="slide-indicator" />
                 </ui:VisualElement>
-                
-                <ui:Button text="Next" name="NextButton" class="nav-button next-button">
+                <ui:Button text="Next" name="NextButton" class="nav-button next-button" style="height: 50px; width: 100px;">
                     <ui:VisualElement name="NextIcon" class="nav-icon next-icon" />
                 </ui:Button>
             </ui:VisualElement>
-            
             <ui:VisualElement name="TutorialFooter" class="tutorial-footer">
                 <ui:Button text="Back to Main Menu" name="BackToMainButton" class="back-button" />
             </ui:VisualElement>
