--- a/Assets/UI/TutorialMenu.uxml
+++ b/Assets/UI/TutorialMenu.uxml
@@ -6,13 +6,17 @@
                 <ui:Label text="Tutorial" name="TutorialTitle" class="tutorial-title" />
                 <ui:Label text="Slide 1 of 5" name="SlideCounter" class="slide-counter" />
             </ui:VisualElement>
-            <ui:VisualElement name="TutorialContent" class="tutorial-content" style="padding-bottom: 20%;">
-                <ui:Image name="SlideImage" scale-mode="ScaleToFit" class="slide-image" />
-                <ui:Label text="Welcome to Skyborne" name="SlideTitle" class="slide-title" style="padding-bottom: 10px;" />
-                <ui:Label text="Embark on an epic aerial adventure in the floating islands of Aetheria. Master the art of flight and discover ancient secrets hidden in the clouds." name="SlideDescription" class="slide-description" style="height: 95px; width: 575px;" />
+            <ui:VisualElement name="TutorialContent" class="tutorial-content">
+                <ui:VisualElement name="SlideImageContainer" class="slide-image-container">
+                    <ui:Image name="SlideImage" scale-mode="ScaleToFit" class="slide-image" />
+                </ui:VisualElement>
+                <ui:VisualElement name="SlideTextContainer" class="slide-text-container">
+                    <ui:Label text="Welcome to Skyborne" name="SlideTitle" class="slide-title" />
+                    <ui:Label text="Embark on an epic aerial adventure in the floating islands of Aetheria. Master the art of flight and discover ancient secrets hidden in the clouds." name="SlideDescription" class="slide-description" />
+                </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="TutorialNavigation" class="tutorial-navigation">
-                <ui:Button text="Previous" name="PreviousButton" class="nav-button previous-button" style="height: 57px; width: 122px;">
+                <ui:Button text="Previous" name="PreviousButton" class="nav-button previous-button" style="height: 40px; min-width: 100px;">
                     <ui:VisualElement name="PrevIcon" class="nav-icon prev-icon" />
                 </ui:Button>
                 <ui:VisualElement name="SlideIndicators" class="slide-indicators">
@@ -22,7 +26,7 @@
                     <ui:VisualElement name="Indicator3" class="slide-indicator" />
                     <ui:VisualElement name="Indicator4" class="slide-indicator" />
                 </ui:VisualElement>
-                <ui:Button text="Next" name="NextButton" class="nav-button next-button" style="height: 58px; width: 130px;">
+                <ui:Button text="Next" name="NextButton" class="nav-button next-button" style="height: 40px; min-width: 100px;">
                     <ui:VisualElement name="NextIcon" class="nav-icon next-icon" />
                 </ui:Button>
             </ui:VisualElement>
