--- a/Assets/UI/EquipUI.uss
+++ b/Assets/UI/EquipUI.uss
@@ -58,10 +58,6 @@
     background-color: rgb(69, 160, 73);
 }
 
-.ability-button:hover {
-    background-color: rgb(69, 160, 73);
-}
-
 .shop-button {
     margin-top: 20px;
     width: 200px;
@@ -70,10 +66,6 @@
     color: white;
     background-color: rgb(85, 85, 85);
     border-radius: 8px;
-}
-
-.shop-button:hover {
-    background-color: rgb(102, 102, 102);
 }
 
 .column-title {
@@ -89,4 +81,18 @@
     color: rgb(204, 204, 204);
     border-color: rgb(119, 119, 119);
     opacity: 0.6;
+}
+/* Red for locked (not bought) abilities */
+.ability-locked {
+    background-color: #a44;
+    color: white;
+}
+
+/* Green for unlocked (bought) abilities */
+.ability-unlocked {
+    background-color: #4a4;
+    color: white;
+}
+.ability-unlocked:hover {
+   background-color: rgb(102, 102, 102);
 }
