--- a/Assets/UI/ShopStyle.uss
+++ b/Assets/UI/ShopStyle.uss
@@ -4,10 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
+    margin: 0;
     flex-direction: row-reverse;
     left: auto;
     padding-top: 0;
@@ -23,20 +20,15 @@
     background-color: rgb(44, 44, 44);
     padding: 40px;
     border-radius: 12px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .title {
     font-size: 32px;
-    font-weight: bold;
     color: rgb(255, 215, 0);
     margin-bottom: 20px;
 }
 
 .grid {
-    display: grid;
-    
-    grid-gap: 20px;
     margin-bottom: 20px;
 }
 
