--- a/Assets/UI/ShopUI.uxml
+++ b/Assets/UI/ShopUI.uxml
@@ -1,43 +1,34 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/ShopStyle.uss?fileID=7433441132597879392&amp;guid=10eebdd84622a394c80e822bc64bae1b&amp;type=3#ShopStyle" />
-    
     <ui:VisualElement name="Root" class="root" style="padding-top: 59px;">
         <ui:VisualElement name="ShopContainer" class="shop-container" style="flex-direction: column; opacity: 1; visibility: visible; overflow: visible; display: flex; background-color: rgba(44, 44, 44, 0.66);">
-            
             <ui:Label text="Ability Shop" class="title" />
-
             <ui:VisualElement name="Grid" class="grid" style="flex-direction: row;">
-                
                 <ui:VisualElement name="FireballItem" class="grid-item">
                     <ui:VisualElement class="item-cost-row" style="flex-direction: row; align-items: center;">
                         <ui:Label text="Fireball - 3" class="item-label" style="color: rgb(255, 255, 255);" />
-                        <ui:Image class="coin-icon" image="Symbol Blue" />
+                        <ui:Image image="Symbol Blue" class="coin-icon" />
                     </ui:VisualElement>
                     <ui:Button name="Fireball" text="Buy" class="shop-button" />
                 </ui:VisualElement>
-
                 <ui:VisualElement name="GustItem" class="grid-item">
                     <ui:VisualElement class="item-cost-row" style="flex-direction: row; align-items: center;">
                         <ui:Label text="Gust - 2" class="item-label" style="color: rgb(255, 255, 255);" />
-                        <ui:Image class="coin-icon" image="Symbol Blue" />
+                        <ui:Image image="Symbol Blue" class="coin-icon" />
                     </ui:VisualElement>
                     <ui:Button name="Gust" text="Buy" class="shop-button" />
                 </ui:VisualElement>
-
                 <ui:VisualElement name="BurstItem" class="grid-item">
                     <ui:VisualElement class="item-cost-row" style="flex-direction: row; align-items: center;">
                         <ui:Label text="Burst - 2" class="item-label" style="color: rgb(255, 255, 255);" />
-                        <ui:Image class="coin-icon" image="Symbol Blue" />
+                        <ui:Image image="Symbol Blue" class="coin-icon" />
                     </ui:VisualElement>
                     <ui:Button name="Burst" text="Buy" class="shop-button" />
                 </ui:VisualElement>
-
             </ui:VisualElement>
-
             <ui:Button name="Inventory" text="Go to Inventory" class="inventory-button" />
-            <ui:Button name="ReturnToMenu" text="Return to Menu" class="menu-button" />
-            <ui:Button name="QuitGame" text="Quit Game" class="quit-button" />
-
         </ui:VisualElement>
     </ui:VisualElement>
+    <ui:Button name="QuitGame" text="Quit Game" class="quit-button" />
+    <ui:Button name="ReturnToMenu" text="Return to Menu" class="menu-button" />
 </ui:UXML>
