--- a/Assets/UI/ShopUI.uxml
+++ b/Assets/UI/ShopUI.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/ShopStyle.uss?fileID=7433441132597879392&amp;guid=10eebdd84622a394c80e822bc64bae1b&amp;type=3#ShopStyle" />
-    <ui:VisualElement name="Root" class="root" style="padding-top: 59px;">
+    <ui:VisualElement name="Root" class="root" style="padding-top: 59px; position: relative;">
         <ui:VisualElement name="ShopContainer" class="shop-container" style="flex-direction: column; opacity: 1; visibility: visible; overflow: visible; display: flex; background-color: rgba(44, 44, 44, 0.66);">
             <ui:Label text="Ability Shop" class="title" />
             <ui:VisualElement name="Grid" class="grid" style="flex-direction: row;">
@@ -28,7 +28,9 @@
             </ui:VisualElement>
             <ui:Button name="Inventory" text="Go to Inventory" class="inventory-button" />
         </ui:VisualElement>
+        <ui:VisualElement name="BottomButtonsContainer" class="bottom-buttons" style="translate: 166px -5px; scale: 5 7;">
+            <ui:Button name="ReturnToMenu" text="Return to Menu" class="menu-button" />
+            <ui:Button name="QuitGame" text="Quit Game" class="quit-button" />
+        </ui:VisualElement>
     </ui:VisualElement>
-    <ui:Button name="QuitGame" text="Quit Game" class="quit-button" />
-    <ui:Button name="ReturnToMenu" text="Return to Menu" class="menu-button" />
 </ui:UXML>
