--- a/Assets/UI/OptionsMenu.uxml
+++ b/Assets/UI/OptionsMenu.uxml
@@ -1,12 +1,25 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+<ui:UXML xmlns:ui="UnityEngine.UIElements"
+         xmlns:uie="UnityEditor.UIElements"
+         xsi="http://www.w3.org/2001/XMLSchema-instance"
+         engine="UnityEngine.UIElements"
+         editor="UnityEditor.UIElements"
+         noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd"
+         editor-extension-mode="False">
+
     <Style src="project://database/Assets/UI/SkyborneMenuStyles.uss?fileID=7433441132597879392&amp;guid=6352289ea0789f94296ed0d34136c41b&amp;type=3#SkyborneMenuStyles" />
+
     <ui:VisualElement name="OptionsContainer" class="options-container">
         <ui:VisualElement name="OptionsCard" class="options-card">
+
             <ui:VisualElement name="OptionsHeader" class="options-header">
                 <ui:Label text="Options" name="OptionsTitle" class="options-title" />
                 <ui:Label text="Customize your game experience" name="OptionsSubtitle" class="options-subtitle" />
             </ui:VisualElement>
-            <ui:VisualElement name="OptionsContent" class="options-content">
+
+            <!-- Make the content area scrollable by using ScrollView -->
+            <ui:ScrollView name="OptionsContent" class="options-content">
+
+                <!-- Audio Section -->
                 <ui:VisualElement name="AudioSection" class="options-section">
                     <ui:VisualElement name="VolumeGroup" class="option-group">
                         <ui:Label text="Master Volume" name="MasterVolumeLabel" class="option-label">
@@ -17,6 +30,7 @@
                             <ui:Label text="75%" name="MasterVolumeValue" class="volume-value" />
                         </ui:VisualElement>
                     </ui:VisualElement>
+
                     <ui:VisualElement name="SFXGroup" class="option-group">
                         <ui:Label text="SFX Volume" name="SFXVolumeLabel" class="option-label">
                             <ui:VisualElement name="SFXIcon" class="option-icon sfx-icon" />
@@ -27,6 +41,8 @@
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
+
+                <!-- Graphics Section -->
                 <ui:VisualElement name="GraphicsSection" class="options-section">
                     <ui:VisualElement name="FullscreenGroup" class="option-group toggle-group">
                         <ui:Label text="Fullscreen Mode" name="FullscreenLabel" class="option-label" />
@@ -36,21 +52,22 @@
                         <ui:Label text="V-Sync" name="VSyncLabel" class="option-label" />
                         <ui:Toggle name="VSyncToggle" value="true" class="option-toggle" />
                     </ui:VisualElement>
-                    <!-- Added FPS Counter Toggle -->
                     <ui:VisualElement name="FPSCounterGroup" class="option-group toggle-group">
                         <ui:Label text="FPS Counter" name="FPSCounterLabel" class="option-label" />
                         <ui:Toggle name="FPSCounterToggle" value="false" class="option-toggle" />
                     </ui:VisualElement>
-                    <!-- Graphics Quality Dropdown -->
                     <ui:VisualElement name="QualityGroup" class="option-group">
                         <ui:Label text="Graphics Quality" name="QualityLabel" class="option-label" />
                         <ui:DropdownField name="QualityDropdown" class="quality-dropdown" />
                     </ui:VisualElement>
                 </ui:VisualElement>
-            </ui:VisualElement>
+
+            </ui:ScrollView>
+
             <ui:VisualElement name="OptionsFooter" class="options-footer">
                 <ui:Button text="Back to Main Menu" name="BackToMainButton" class="back-button" />
             </ui:VisualElement>
+
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
