--- a/Assets/UI/ShopUI.uxml
+++ b/Assets/UI/ShopUI.uxml
@@ -7,7 +7,7 @@
                 <ui:VisualElement name="FireballItem" class="grid-item">
                     <ui:VisualElement class="item-cost-row" style="flex-direction: row; align-items: center;">
                         <ui:Label text="Fireball - 3" class="item-label" style="color: rgb(255, 255, 255);" />
-                        <ui:Image image="Symbol Blue" class="coin-icon" />
+                        <ui:Image image="Symbol Blue" class="coin-icon" style="border-left-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-top-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0; border-top-left-radius: 22px; border-top-right-radius: 22px; border-bottom-right-radius: 22px; border-bottom-left-radius: 22px;" />
                     </ui:VisualElement>
                     <ui:Button name="Fireball" text="Buy" class="shop-button" />
                 </ui:VisualElement>
@@ -28,7 +28,7 @@
             </ui:VisualElement>
             <ui:Button name="Inventory" text="Go to Inventory" class="inventory-button" />
         </ui:VisualElement>
-        <ui:VisualElement name="BottomButtonsContainer" class="bottom-buttons" style="translate: 166px -5px; scale: 5 7;">
+        <ui:VisualElement name="BottomButtonsContainer" class="bottom-buttons" style="translate: 357px 49px; scale: 1 1;">
             <ui:Button name="ReturnToMenu" text="Return to Menu" class="menu-button" />
             <ui:Button name="QuitGame" text="Quit Game" class="quit-button" />
         </ui:VisualElement>
